tests/query_errors/pp_embed_unrecognized_token5/error.txt
Error: 
    1 | define script snot
    2 | script
    3 |   use foo::bar as use;
      |                   ^^^ Found the token `use` but expected `<ident>`
    4 |   event
    5 | end;
